# provenance

./: .gitignore
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_server.py
backend/alembic/: env.py
backend/alembic/versions/: ed5a7116dcbb_initial_schema.py
backend/app/: auth.py  config.py  crud.py  db.py  deps.py  main.py  models.py  run_manager.py  schemas.py
backend/app/agent/: checkpointer.py  graph.py  nodes.py  prompts.py  run.py  state.py  tools.py
backend/app/routers/: auth.py  health.py  research.py
backend/scripts/: reset_research.py
docs/: SPEC.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/login/: page.tsx
frontend/app/report/[id]/: page.tsx
frontend/app/research/[id]/: page.tsx
frontend/components/: dashboard.tsx  landing.tsx  markdown.tsx  providers.tsx  site-header.tsx  skeletons.tsx
frontend/components/report/: sources-panel.tsx
frontend/components/research/: review-panel.tsx  stepper.tsx
frontend/hooks/: use-page-title.ts
frontend/lib/: api.ts  auth.tsx  schemas.ts
