[project]
name = "provenance-backend"
version = "0.1.0"
description = "Agentic research-and-report system — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database (async)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Agent stack
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.7",
    "tavily-python>=0.5.0",
    # Auth
    "authlib>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.2.0",
    # Misc
    "httpx>=0.27.2",
    "psycopg[binary]>=3.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
